--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     implementation 'com.android.support:support-v4:28.0.0'
 
+    // for circle image view
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+
 }
