--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,17 @@
     <application
         android:name=".TwitterApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo_twitter"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimelineActivity"></activity>
+        <activity android:name=".ComposeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".TimelineActivity" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
